--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,38 @@
 .container {
-  padding: 0 2rem;
+  max-width: 1900px;
+}
+
+.header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 0 10%;
+  align-items: center;
+  position: fixed;
+  z-index: 1000;
+  color: white;
+}
+
+.scroll {
+  background: white;
+  color: black;
+  box-shadow: 10px -13px 20px 0px;
+}
+
+.header ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header li {
+  margin: 0 10px;
+}
+
+.header li:hover {
+  color: red;
+  cursor: pointer;
 }
 
 .main {
@@ -10,6 +43,45 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.skillsSection {
+  width: 100%;
+  height: auto;
+  min-height: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.skillsContainer {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 50px;
+  flex-wrap: wrap;
+}
+
+.skillsImage {
+  margin: 20px 25px;
+}
+
+.about {
+  display: flex;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 0 50px;
+}
+
+.headShot {
+  border-radius: 50%;
+}
+
+.box {
+  padding: 0 40px;
+  font-size: 18px;
 }
 
 .footer {
@@ -61,8 +133,8 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
+    monospace;
 }
 
 .grid {
@@ -106,6 +178,63 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.info {
+  position: absolute;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.336);
+  justify-content: center;
+  align-items: center;
+}
+
+.videoBg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  background: #232a34;
+}
+
+.icons {
+  display: flex;
+}
+
+.socialIcon {
+  width: 50px;
+  font-size: 24px;
+}
+
+.socialIcon:hover {
+  color: #11a4e9;
+  cursor: pointer;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 5px;
+}
+
+.footer ul {
+  list-style: none;
 }
 
 @media (max-width: 600px) {
