Fixed mobile styling

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -37,7 +37,6 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -241,5 +240,13 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+
+  .about {
+    padding: 0;
+  }
+
+  .dSmNone {
+    display: none;
   }
 }
