--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,7 +7,7 @@
   width: 100%;
   justify-content: space-between;
   padding: 0 10%;
-  align-items: center;
+  align-items: start;
   position: fixed;
   z-index: 1000;
   color: white;
@@ -24,6 +24,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0;
 }
 
 .header li {
@@ -181,6 +182,7 @@
 
 .info {
   position: absolute;
+  top: 0;
   color: white;
   display: flex;
   flex-direction: column;
