--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,13 +1,9 @@
-.container {
-  max-width: 1900px;
-}
-
 .header {
   display: flex;
   width: 100%;
   justify-content: space-between;
   padding: 0 10%;
-  align-items: start;
+  align-items: flex-start;
   position: fixed;
   z-index: 1000;
   color: white;
@@ -250,5 +246,13 @@
 
   .dSmNone {
     display: none;
+  }
+}
+
+@media (min-width: 1280px) {
+  .about,
+  .skillsContainer {
+    max-width: 1280px;
+    margin: auto;
   }
 }
